Correct update method, refactoring
